--- a/cv.html
+++ b/cv.html
@@ -78,20 +78,20 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>XHTML</li>
+								<li>HTML</li>
 								<li>CSS</li>
 								<li class="last">Javascript</li>
 							</ul>
 
 							<ul class="talent">
-								<li>Jquery</li>
 								<li>PHP</li>
-								<li class="last">CVS / Subversion</li>
+								<li>SQL</li>
+								<li class="last">Python</li>
 							</ul>
 
 							<ul class="talent">
-								<li>OS X</li>
-								<li>Windows XP/Vista</li>
+								<li>Arduino</li>
+								<li>Windows</li>
 								<li class="last">Linux</li>
 							</ul>
 						</div>
