--- a/cv.html
+++ b/cv.html
@@ -72,10 +72,10 @@
 							</div>
 
 							<div class="job">
-								<h2>Microsoft</h2>
-								<h3>Principal and Creative Lead</h3>
+								<h2>Associate Degree</h2>
+								<h3>at La Providence in Amiens</h3>
 								<h4>2004-2005</h4>
-								<p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
+								<p>Currently a student in informatic and cybersecurity</p>
 							</div>
 
 						</div><!--// .yui-u -->
