--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Associate Degree</div>
-            <p class="category"></p>
+            <p class="category">at La Providence</p>
             <p></p>
           </div>
         </div>
